--- a/android-engineer.html
+++ b/android-engineer.html
@@ -66,7 +66,7 @@
 <p><span class="badge badge-light">New York, United States New York</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://jobs.crelate.com/portal/averityteam/job/x5f7khwesewogrxqugzwc39pdo'>Senior Android Engineer | Averity</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/averityteam/job/x5f7khwesewogrxqugzwc39pdo'>Senior Android Engineer | Averity</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -84,7 +84,7 @@ Machine Learning Experience; Knowledge of the Android SDK performance tools
 <p><span class="badge badge-light">Barcelona Barcelona</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Adevinta/743999692162834-android-software-engineer-coches-motos-net'>Adevinta Android Software Engineer Coches&amp;Motos.net | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Adevinta/743999692162834-android-software-engineer-coches-motos-net'>Adevinta Android Software Engineer Coches&amp;Motos.net | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Barcelona</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -100,7 +100,7 @@ Machine Learning Experience; Knowledge of the Android SDK performance tools
 <p><span class="badge badge-light"></span></p>
 <p>6 days ago ... Apply online for the job of Senior Android Mobile Engineer at allego.</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/mojovision/71c937e4-eeef-4bd2-93f1-343ecdb5893e'>Mojo Vision - Sr. Android Software Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/mojovision/71c937e4-eeef-4bd2-93f1-343ecdb5893e'>Mojo Vision - Sr. Android Software Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -118,7 +118,7 @@ Machine Learning Experience; Knowledge of the Android SDK performance tools
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/medmen/jobs/4290251002'>Job Application for Principal Android Engineer at MedMen</a></h5> 
+<h5><a href='https://boards.greenhouse.io/medmen/jobs/4290251002'>Job Application for Principal Android Engineer at MedMen</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
@@ -213,7 +213,7 @@ and other continuing education. KotlinConf; DroidCon; Google I/O; Android Dev?..
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-14</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/twitch/jobs/4342015002'>Job Application for Android Engineer  at Twitch</a></h5> 
+<h5><a href='https://boards.greenhouse.io/twitch/jobs/4342015002'>Job Application for Android Engineer  at Twitch</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-07-14</p>
 <hr/>
@@ -255,11 +255,11 @@ workforces with GoSpotCheck. Our software helps teams perfect merchandising,
 <p><span class="badge badge-light">Madrid Madrid, Spain</span></p>
 <p>Posted on: 2019-07-11</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/culturetrip/ba020909-1cfa-4c03-b8b5-d685e29bcf95'>Culture Trip - Android Software Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/culturetrip/ba020909-1cfa-4c03-b8b5-d685e29bcf95'>Culture Trip - Android Software Engineer</a></h5> 
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-07-11</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/hiring/28ce3410-4412-48dc-af85-6fadaf1d9e0a'>  - Senior Android QA Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/hiring/28ce3410-4412-48dc-af85-6fadaf1d9e0a'>  - Senior Android QA Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-11</p>
 <hr/>
@@ -330,11 +330,11 @@ developer. You're experienced when it comes to improving your colleagues?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-07-03</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://codelitt-incubator.workable.com/jobs/1065844'>Android/iOS Engineer - Apply online - Codelitt Incubator - Jobs</a></h5> 
+<h5><a href='https://codelitt-incubator.workable.com/jobs/1065844'>Android/iOS Engineer - Apply online - Codelitt Incubator - Jobs</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>23 hours ago ... Apply online for the job of Android/iOS Engineer at Codelitt Incubator.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/gojek/763d654d-175f-4e71-b0c9-c0f4d4d2ee91'>GOJEK - Android Engineer, Transport</a></h5> 
+<h5><a href='https://jobs.lever.co/gojek/763d654d-175f-4e71-b0c9-c0f4d4d2ee91'>GOJEK - Android Engineer, Transport</a></h5> 
 <p><span class="badge badge-light">Singapore</span></p>
 <p>Posted on: 2019-07-01</p>
 <hr/>
@@ -362,7 +362,7 @@ developer. You're experienced when it comes to improving your colleagues?...</p>
 <p><span class="badge badge-light">Chicago, IL</span></p>
 <p>Posted on: 2019-06-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://pegipegi-dot-com.workable.com/j/1A5FC3DF9C'>Pegipegi - Jobs: Senior Android Engineer - Apply online</a></h5> 
+<h5><a href='https://pegipegi-dot-com.workable.com/j/1A5FC3DF9C'>Pegipegi - Jobs: Senior Android Engineer - Apply online</a></h5> 
 <p><span class="badge badge-light">Jakarta, Indonesia</span></p>
 <p>Posted on: 2019-06-29</p>
 <hr/>
@@ -382,7 +382,7 @@ developer. You're experienced when it comes to improving your colleagues?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-06-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/theappbusiness/job/o2AnafwT'>The App Business Careers - Senior Android Engineer</a></h5> 
+<h5><a href='https://jobs.jobvite.com/theappbusiness/job/o2AnafwT'>The App Business Careers - Senior Android Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-06-27</p>
 <hr/>
@@ -398,7 +398,7 @@ developer. You're experienced when it comes to improving your colleagues?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-06-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Adevinta/743999690406394-android-engineer'>Adevinta Android Engineer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Adevinta/743999690406394-android-engineer'>Adevinta Android Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-06-25</p>
 <hr/>
@@ -457,7 +457,7 @@ sushi, fried chicken, hamburgers and so on from our internet service......</p>
 <p><span class="badge badge-light">Hamburg, Germany</span></p>
 <p>Posted on: 2019-06-22</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://atlanticmedia.applytojob.com/apply/lmT1mSpTUQ/Android-Engineer'>Android Engineer - Atlantic Media - Career Page</a></h5> 
+<h5><a href='http://atlanticmedia.applytojob.com/apply/lmT1mSpTUQ/Android-Engineer'>Android Engineer - Atlantic Media - Career Page</a></h5> 
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-06-22</p>
 <hr/>
