--- a/android-developer.html
+++ b/android-developer.html
@@ -77,11 +77,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
-<h5><a href='https://endios.join.com/jobs/255141-android-lead-developer-m-f-d-immediately-open-ended-full-time-contract'>Job @ endios (Hamburg): Android Lead Developer (m/... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://endios.join.com/jobs/255141-android-lead-developer-m-f-d-immediately-open-ended-full-time-contract'>Job @ endios (Hamburg): Android Lead Developer (m/... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/thehavasgroup/job/oD5J7fwi'>The Havas Group Careers - Senior Android Developer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/thehavasgroup/job/oD5J7fwi'>The Havas Group Careers - Senior Android Developer</a></h5> 
 <p><span class="badge badge-light">Toronto</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -173,7 +173,7 @@ European software development company providing services worldwide since?...</p>
 <p><span class="badge badge-light">Barcelona</span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/vpTech/5eb93330-e29e-47b3-98bc-631f92bf3da0'>vpTech - Android Developer</a></h5> 
+<h5><a href='https://jobs.lever.co/vpTech/5eb93330-e29e-47b3-98bc-631f92bf3da0'>vpTech - Android Developer</a></h5> 
 <p><span class="badge badge-light">Warsaw</span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
@@ -181,7 +181,7 @@ European software development company providing services worldwide since?...</p>
 <p><span class="badge badge-light">Barcelona</span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/vpTech/82ee27a5-ee83-4ab9-88d8-1af86893a5cb'>vpTech - Android developer H/F</a></h5> 
+<h5><a href='https://jobs.lever.co/vpTech/82ee27a5-ee83-4ab9-88d8-1af86893a5cb'>vpTech - Android developer H/F</a></h5> 
 <p><span class="badge badge-light">Paris</span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
@@ -236,7 +236,7 @@ this job. Responsabilidades. -Dise?o y desarrollo de aplicaciones modulares,?...
 <p><span class="badge badge-light">Porto, Portugal</span></p>
 <p>Posted on: 2019-07-14</p>
 <hr/>
-<h5><a href='http://latitudeinc.applytojob.com/apply/BBfNXhHnA3/Senior-Android-Developer'>Senior Android Developer - Latitude, Inc. - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://latitudeinc.applytojob.com/apply/BBfNXhHnA3/Senior-Android-Developer'>Senior Android Developer - Latitude, Inc. - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-14</p>
 <hr/>
@@ -254,7 +254,7 @@ this job. Responsabilidades. -Dise?o y desarrollo de aplicaciones modulares,?...
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-13</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/dkbcodefactory/e1c6dd05-b467-44fd-ac6a-aebe6dea60c5'>DKB Code Factory - Senior Android Developer (f,m,x)</a></h5> 
+<h5><a href='https://jobs.lever.co/dkbcodefactory/e1c6dd05-b467-44fd-ac6a-aebe6dea60c5'>DKB Code Factory - Senior Android Developer (f,m,x)</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-12</p>
 <hr/>
@@ -270,7 +270,7 @@ this job. Responsabilidades. -Dise?o y desarrollo de aplicaciones modulares,?...
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-12</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/LecleVietnam1/743999691549861-senior-android-developer-banking-sector-'>Lecle Vietnam Senior Android Developer (Banking Sector) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/LecleVietnam1/743999691549861-senior-android-developer-banking-sector-'>Lecle Vietnam Senior Android Developer (Banking Sector) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Singapore</span></p>
 <p>Posted on: 2019-07-12</p>
 <hr/>
@@ -441,11 +441,11 @@ Experience in Go, Javascript, Swift, Kotlin Git(Hub), TDD, BDD, API integrations
 <p><span class="badge badge-light">Dubai Dubai</span></p>
 <p>Posted on: 2019-07-02</p>
 <hr/>
-<h5><a href='https://macropace-technologies.workable.com/j/EA098F5D19'>Macropace Technologies - Jobs: Android Developer(C2H), 5 to 9 Years, Bangalore - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://macropace-technologies.workable.com/j/EA098F5D19'>Macropace Technologies - Jobs: Android Developer(C2H), 5 to 9 Years, Bangalore - Apply online</a></h5> 
 <p><span class="badge badge-light">Bangalore Bangalore</span></p>
 <p>Posted on: 2019-07-02</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=odKhafw8&__jvst=Employee+Referral&__jvsd=sJHwDfwj&__jvsc=Twitter&bid=nVHxxKwV'>ServiceNow Careers - Senior Android Developer</a></h5> 
+<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=odKhafw8&__jvst=Employee+Referral&__jvsd=sJHwDfwj&__jvsc=Twitter&bid=nVHxxKwV'>ServiceNow Careers - Senior Android Developer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-07-01</p>
 <hr/>
